Bug fixed. List of int sorted by score.getPart()